# vial-gui

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt  vial-linux.spec  vial-mac.spec  vial-win.spec
.github/workflows/: build.yml  main.yml  release.yml  test.yml
misc/: Vial.desktop
src/installer/windows/: Installer.nsi
src/main/icons/: Icon.icns
src/main/python/: app_context.py  main.py  util.py
src/main/python/autorefresh/: autorefresh_thread.py  autorefresh_thread_win.py
src/main/python/editor/: keymap_editor.py
src/main/python/macro/: macro_action.py  macro_action_ui.py  macro_line.py  macro_tab.py
src/main/python/test/: conftest.py  test_gui.py  test_macro.py
util/linux-builder/: Dockerfile  _builder.sh
